# instant-glicko-2-pyo3

./: .gitignore  Cargo.toml  README.md  requirements.txt
src/: engine.rs  lib.rs  python_bindings.rs
tests/: conftest.py  test_instant_glicko2.py
