[package]
name = "instant-glicko-2"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/gpluscb/instant-glicko-2"
readme = "README.md"
license = "MIT"
keywords = ["glicko-2", "glicko", "rating", "elo"]
categories = ["game-development", "mathematics"]
description = "Implementation of the Glicko-2 rating system that allows for instant feedback after games, not just once a rating period closes"
rust-version = "1.63"

[package.metadata]
msrv = "1.58.1"
docs.rs.features = ["serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module",  "auto-initialize", "abi3-py310", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }

[lib]
name = "instant_glicko2"
crate-type = ["cdylib"]

[dev-dependencies]
maturin = "1.5.1"

[package.metadata.maturin]
name = "instant_glicko2"